--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Backroads || Tour Company</title>
+    <title>Marcela Studio || Salon de Belleza</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <!-- font-awesome -->
@@ -16,29 +16,300 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>flexbox backroads</h1>
     <!-- header  -->
+    <header id="home">
+      <!--navbar-->
+      <nav class="navbar">
+        <div class="nav-center">
+        <!--nav header-->
+        <div class="nav-header">
+          <img class="nav-logo" class="" alt="" />
+          <button type="button" class="nav-toggle" 
+          id="nav-toggle">
+         <i class="fas fa-bars"></i>
+        </button>
+        </div>
+        <!--end of nav header-->
+         <!--nav links-->
+    <ul class="nav-links" id="nav-links">
+      <!--single links-->
+      <li>
+        <a href="#home" class="nav-link scroll-link">Inicio</a>
+      </li>
+      <!--end of single links-->
+         <!--single links-->
+         <li>
+          <a href="#about" class="nav-link scroll-link">Sobre mi</a>
+        </li>
+        <!--end of single links-->
+           <!--single links-->
+      <li>
+        <a href="#services" class="nav-link scroll-link">Mis servicios</a>
+      </li>
+      <!--end of single links-->
+         <!--single links-->
+         <li>
+          <a href="#featured" class="nav-link scroll-link">Mi galeria</a>
+        </li>
+        <!--end of single links-->
+    </ul>
+    <!--enf of nav links-->
+    <!--nav icons-->
+    <ul class="nav-icons">
+      <!--single icons-->
+      <li>
+        <a href="https://www.twitter.com" target="_blank" 
+        class="nav-icon">
+         <i class="fab fa-squarespace"></i>
+      </a> 
+      </li>
+      <!--end of single icons-->
+      <!--single icons-->
+      <li>
+        <a href="https://www.twitter.com" target="_blank" 
+        class="nav-icon">
+         <i class="fab fa-facebook"></i>
+      </a> 
+      </li>
+      <!--end of single icons-->
+      <!--single icons-->
+      <li>
+        <a href="https://www.twitter.com" target="_blank" 
+        class="nav-icon">
+         <i class="fab fa-instagram"></i>
+      </a> 
+      </li>
+      <!--end of single icons-->
+    </ul>
+    <!--end of nav icons-->
+        </div>
+      </nav>
+      <!--hero-->
+      <div class="hero">
+        <div class="hero-banner"> 
+          <h1>Marcela Studio</h1>
+           <p>Mi estándar de calidad en el servicio está basado en la experiencia técnica y 
+             la dedicación de nuestro equipo que estarán felices de atenderte y cumplir tus expectativas.</p>
+             <a href="#services" class="btn hero-btn">Explora mis servicios</a>
+        </div>
+      </div>
+    </header>
     <!-- end of header  -->
 
     <!-- about section -->
+    <section class="section" id="about"> 
+    <!--section title-->
+    <div class="section-title">
+      <h2>Sobre <span>mi</span></h2>
+    </div>
+    <!--end of section-title-->
+    <div class="section-center about-center">
+      <!--about img wrapper-->
+       <article class="about-img">
+      <img 
+      src="./images/logo1.png" 
+      class="about-photo"
+      alt="awsome"
+      />
+       </article>
+       <article class="about-info">
+         <h3>Mi experiencia</h3>
+         <p>Mi nombre es Marcela Bustos González, soy estilista y cultora por más de 10 años.</p> 
+        <p>Siempre me he determinado 
+           por brindarle lo mejor al cliente, la efectividad y puntualidad son mis mejores hábitos 
+           que me han desemepeñado desde hace tiempo hasta la actualidad.</p>
+           <a href="#" class="btn">Ver más</a>
+       </article>
+    </div>
+    </section>
     <!-- end of about section -->
 
     <!-- services -->
+    <section class="sectin services" id="services">
+      <!--section title-->
+    <div class="section-title">
+      <h2>Mis <span>servicios</span></h2>
+    </div>
+    <!--end of section-title-->
+    <div class="section-center services-center">
+      <!--single service-->
+      <article class="service">
+        <span class="service-icon">
+          <i class="fa fa-female"></i>
+        </span>
+        <div class="service-info">
+          <h4 class="service-title">Corte de cabello y peinado</h4>
+          <p>Realizo el peinado adecuado para ti, desde ese alaciado para ir a trabajar, peinado casual, 
+            alto peinado para XV años y bodas; o incluso un look de pasarela. Siempre teniendo la 
+            seguridad que el look que quieras lucir, Cualquier peinado a tu gusto lo puedo crear.</p>
+        </div>
+      </article>
+      <!--single service-->
+      <article class="service">
+        <span class="service-icon">
+          <i class="fa fa-paint-brush"></i>
+        </span>
+        <div class="service-info">
+          <h4 class="service-title">Maquillaje</h4>
+          <p>El maquillaje de ojos es una parte muy importante de cualquier look ya que la mirada siempre es un 
+            punto fuerte a resaltar. Los ojos son muy expresivos y con frecuencia se convierten el los protagonistas 
+            del maquillaje.</p>
+            <p>¿Tienes unos XV años? ¿Eres novia y quieres lucir natural 
+            y como lo soñaste? ¿Cena entre amigas? Tenemos el maquillaje adecuado para cada ocasión, 
+            ya sea en maquillaje convencional o con aerógrafo. Solo tendrás que preocuparte por divertirte.</p>
+        </div>
+      </article>
+      <!--end of single service-->
+      <!--end of single service-->
+    </div>
+    </section>
     <!--end services -->
 
     <!-- featured tours -->
+    <section class="section" id="featured">
+       <!--section title-->
+    <div class="section-title">
+      <h2>Mi <span>galeria</span></h2>
+    </div>
+    <!--end of section-title-->
+    <!--featured cebter-->
+    <div class="section-center featured-center"> 
+      <!--single tour galery-->
+      <article class="tour-card">
+        <div class="tour-imag-container">
+          <img src="./images/foto1.jpg" class="tour-img" alt="" /> 
+        </div>
+        <!--info-->
+        <div>
+          <h4>Peinado</h4>
+        </div>
+      </article>
+      <!-- end of single tour galery-->
+      <!--single tour galery-->
+      <article class="tour-card">
+        <div class="tour-imag-container">
+          <img src="./images/foto12.jpg" class="tour-img" alt="" /> 
+        </div>
+        <!--info-->
+        <div>
+          <h4>Peinado</h4>
+        </div>
+      </article>
+      <!-- end of single tour galery-->
+      <!--single tour galery-->
+      <article class="tour-card">
+        <div class="tour-imag-container">
+          <img src="./images/foto3.jpg" class="tour-img" alt="" /> 
+        </div>
+        <!--info-->
+        <div>
+          <h4>Maquillaje</h4>
+        </div>
+      </article>
+      <!-- end of single tour galery-->
+      <!--single tour galery-->
+      <article class="tour-card">
+        <div class="tour-imag-container">
+          <img src="./images/foto4.jpg" class="tour-img" alt="" /> 
+        </div>
+        <!--info-->
+        <div>
+          <h4>Peinado </h4>
+        </div>
+      </article>
+      <!-- end of single tour galery-->
+    </div>
+    <div class="tour-btn">
+      <a href="#" class="btn">Toda mi galería</a>
+    </div>
+    </section>
     <!-- end of featured tours -->
 
     <!-- contact -->
-
+    <section class="section contact" id="contact">
+      <div class="contact-title">
+        <!--contact title-->
+        <article class="contact-title">
+          <h3>¿Quieres que tu próximo cambio de look sea fascinante?</h3>
+          <p>Contáctame vía correo electrónico</p>
+        </article>
+        <!--contact form-->
+        <form class="contact-form">
+          <input 
+          type="email" 
+          name="email" 
+          class="form-control" 
+          placeholder="correo electronico"
+          />
+          <button type="submit" class="btn-submit">Enviar</button>
+        </form>
+      </div>
+    </section>
     <!-- end of contact -->
-
-    <!-- gallery  -->
 
     <!-- end of gallery  -->
 
-    <!-- footer -->
 
+    <!-- footer -->
+    <footer class="section footer">
+    <!--footer links-->
+    <ul class="footer-links">
+      <!--single links-->
+      <li>
+        <a href="#home" class="footer-link scroll-link">Inicio</a>
+      </li>
+      <!--end of single links-->
+         <!--single links-->
+         <li>
+          <a href="·about" class="footer-link scroll-link">Sobre mi</a>
+        </li>
+        <!--end of single links-->
+           <!--single links-->
+      <li>
+        <a href="#services" class="footer-link scroll-link">Mis servicios</a>
+      </li>
+      <!--end of single links-->
+         <!--single links-->
+         <li>
+          <a href="#featured" class="footer-link scroll-link">Mi galeria</a>
+        </li>
+        <!--end of single links-->
+    </ul>
+    <!--enf of footer links-->
+    <!--footer icons-->
+    <ul class="footer icons">
+      <!--single icons-->
+      <li>
+        <a href="https://www.twitter.com" target="_blank" 
+        class="footer-icon">
+         <i class="fab fa-squarespace"></i>
+      </a> 
+      </li>
+      <!--end of single icons-->
+      <!--single icons-->
+      <li>
+        <a href="https://www.twitter.com" target="_blank" 
+        class="footer-icon">
+         <i class="fab fa-facebook"></i>
+      </a> 
+      </li>
+      <!--end of single icons-->
+      <!--single icons-->
+      <li>
+        <a href="https://www.twitter.com" target="_blank" 
+        class="footer-icon">
+         <i class="fab fa-instagram"></i>
+      </a> 
+      </li>
+      <!--end of single icons-->
+    </ul>
+    <!--end of footer icons-->
+    <p class="copyright">
+      copyright &copy; Marcela Studio <span id="date">
+      </span>.
+      Todos los derechos reservados
+    </p>
+    </footer>
     <!-- js -->
     <script src="./js/app.js"></script>
   </body>
